<resources>
    <string name="app_name">App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="assignments">Assignments</string>
    <string name="citations">Citations</string>
    <string name="sources">Sources</string>
    <string name="start">Start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url">URL</string>
    <string name="name">Name</string>
    <string name="author">Author(s)</string>
    <string name="year">Year</string>
    <string name="source">Source</string>
    <string name="assignment">Assignment</string>
    <string name="page">Page</string>
    <string name="description">Description</string>
</resources>
