<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/start" />
        <item
            android:id="@+id/nav_sources"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/sources" />
        <item
            android:id="@+id/nav_citations"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/citations" />
        <item
            android:id="@+id/nav_assignments"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/assignments" />
    </group>

</menu>
